--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "@t3-oss/env-nextjs": "^0.2.1",
     "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.4.0",
     "next": "^13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
